src/objects/X3_0_Kasese_Coffee__c.object
<CustomObject>
    <fields>
        <fullName>A_Kg_of_Robusta_Coffee_at_retail_price__c</fullName>
        <label>A Kg of Robusta Coffee at retail price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Kg_of_Robusta_coffee_at_wholesale_pric__c</fullName>
        <label>A Kg of Robusta coffee at wholesale pric</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_trader_in_Robusta_coffee__c</fullName>
        <label>Name of trader in Robusta coffee</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_0_Market_Kasese__c</fullName>
        <label>3.0 Market Kasese</label>
        <referenceTo>Market_Kasese__c</referenceTo>
        <relationshipLabel>3.0 Kasese Coffee</relationshipLabel>
        <relationshipName>X3_0_Kasese_Coffee</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>3.0 Kasese Coffee</label>
    <nameField>
        <displayFormat>KC-{0000}</displayFormat>
        <label>3.0 Kasese  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Kasese Coffee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>